--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,44 @@
 absl-py==2.1.0
 ale-py==0.8.1
+alembic==1.13.1
 AutoROM==0.6.1
 AutoROM.accept-rom-license==0.6.1
+bcrypt==4.1.2
 certifi==2024.2.2
+cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
+colorlog==6.8.2
 contourpy==1.2.0
+cryptography==42.0.5
 cycler==0.12.1
+DataProperty==1.0.1
 Farama-Notifications==0.0.4
 fastfiz @ git+https://github.com/williamwoldum/fastfiz.git@2af8aed22bec1faeb5ac92b98b0751a0023f3fb7
-fastfiz-renderer @ git+https://github.com/williamwoldum/fastfiz-renderer.git@e87a739d09518a4520ad0be2a5c2a17c470235a2
+fastfiz_renderer @ git+https://github.com/williamwoldum/fastfiz-renderer.git@e87a739d09518a4520ad0be2a5c2a17c470235a2
 filelock==3.13.1
 fonttools==4.49.0
 freetype-py==2.4.0
 fsspec==2024.2.0
 glfw==2.7.0
+greenlet==3.0.3
 grpcio==1.62.0
 gymnasium==0.29.1
 hsluv==5.0.4
+huggingface-hub==0.21.4
+huggingface-sb3==3.0
 idna==3.6
 importlib_resources==6.1.3
 Jinja2==3.1.3
 kiwisolver==1.4.5
+Mako==1.3.2
 Markdown==3.5.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.3
+mbstrdecoder==1.1.3
 mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.2.1
@@ -44,35 +56,50 @@ nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.4.99
 nvidia-nvtx-cu12==12.1.105
 opencv-python==4.9.0.80
+optuna==3.5.0
 p5 @ git+https://github.com/williamwoldum/p5.git@19b96bc00be29d624982c6ecee23fba104457277
 packaging==23.2
 pandas==2.2.1
+paramiko==3.4.0
+pathvalidate==3.2.0
 Pillow==9.0.1
 protobuf==4.25.3
 psutil==5.9.8
 pybind11==2.11.1
+pycparser==2.21
 pygame==2.5.2
 Pygments==2.17.2
+PyNaCl==1.5.0
 PyOpenGL==3.1.6
 PyOpenGL-accelerate==3.1.7
 pyparsing==3.1.2
+pytablewriter==1.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
 requests==2.31.0
 rich==13.7.1
+rl-zoo3==2.2.1
+sb3-contrib==2.2.1
 Shimmy==1.3.0
 six==1.16.0
 skia-python==87.5
+SQLAlchemy==2.0.28
 stable-baselines3==2.2.1
 sympy==1.12
+tabledata==1.3.3
+tcolorpy==0.1.4
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 torch==2.2.1
 tqdm==4.66.2
 triton==2.2.0
+typepy==1.3.2
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==1.26.6
 vectormath==0.2.2
 vispy==0.10.0
+wasabi==1.1.2
 Werkzeug==3.0.1
